--- a/9346B-G4/9346B-G4-2/StyleSheet1/mainDesign.css
+++ b/9346B-G4/9346B-G4-2/StyleSheet1/mainDesign.css
@@ -1,17 +1,29 @@
-html {
-	box-sizing:  border-box;
+@keyframes moveleft{
+	0%{margin-left:1350px;}
+	100%{}
 }
 
-body {
+@keyframes movedown{
+	0%{margin-top:-1000px;}
+	100%{}
+}
 
-	font-family: sans-serif;
+
+body {
 	justify-content: space-around;
-	background-color: #fff;
+	background-color: #F0F3F4;
+	width:800px; 
+	margin:auto; 
+	padding:0;
+	vertical-align: center;
 }
 
 #ban {
 	width: 400px;
 	height: 80px;
+    display: block;
+    margin-left: -55%;
+    animation: moveleft 4s;
 }
 
 
@@ -19,31 +31,20 @@ body {
 header {
 	position: sticky;
 	top: 0;
-    width: 100%;
     height: 80px;
     background-color: none;
     box-sizing: border-box;
 	color: #555;
-	margin-left: 30%;	
-	vertical-align: center;
-
 }
+
+
 
 h1{
 	display: block;
 	font-size: 2em;
 	font-weight: bold;
-	font-family: Bookman;
+	font-family: Book Antiqua;
 }
-
-nav.bgContainer{
-	width:800px; 
-	margin:auto; 
-	padding:0;
-	vertical-align: center;
-
-}
-
 section {
 	margin-top: 100px;
 }
@@ -60,22 +61,32 @@ article {
 	margin:auto;
 	width: 800px;
 	height: 400px;
+	transition: transform .3s;
+}
+#JCamp:hover{
+	transform: scale(1.1);
 }
 
 nav.links{
-    
-    width: 100%;
-    height: 35px;
-    margin-top: 30px;
-    margin-left: -350px;
-    display: inline-flex;
+	width:100px;
+    position: sticky;
+    margin-top: 10%;
     text-align: left;
     font-size: 25px;
-    font-family: Bookman;
+    font-family: garamond ;
     font-weight: bold;
-    padding: 20px;
-
-
+	margin-left:-50%;
+	border-style: groove;
+	border-width: 0px;
+	border-radius: 5px;
+	padding-left: 80px;
+	padding-right: 80px;
+	padding-bottom: 20px;
+	padding-top: 10px;
+	white-space: nowrap;
+	background-color: #797D7F;
+	border-color: none;
+	animation:movedown 3s;
 }
 #zone-guard{
 
@@ -86,8 +97,9 @@ nav.links{
 
 
 nav.links a{
-	display: block;
+	display: inline-block;
 	text-decoration: none;
+	color: #FDFEFE;
 
 }
 
@@ -98,11 +110,12 @@ nav.links a{
 	height: 400px;
 }
 
+
 nav.links a:hover{
 	display: inline;
-	border-bottom: 5px solid black;
-	margin-right: 30px;
+	margin-right: 20px;
 	padding: 1px;
+	color: black;
 }
 
 a.nav-link {
@@ -116,13 +129,9 @@ ul.nav-head {
     display: block;
     list-style: none;
     color: white;
-    font-size: 0.85em;
-    margin: 8px 0 0 0;
+    font-size: 1em;
+    margin: 8px;
     padding: 0;
-}
-
-ul.nav-head li{
-	
 }
 
 ul.nav-email li{
@@ -186,4 +195,23 @@ h1.i-h1 {
 	margin: auto;
 	height: 250px;
 	width: 200px;
+	background-color: none;
+}
+
+h3 {
+	font-size: 25px;
+	font-family: Lucida Sans Unicode, sans-serif;
+}
+
+p {
+	font-family: times new roman, sans;
+	font-size: 18px;
+	margin-left: auto;
+    margin-right: auto;
+    padding-top: 15px;
+    padding-left: 40px;
+    padding-right: 40px;
+}
+h2{
+	font-family: Courier new, sans;
 }
