--- a/9346B-G4/9346B-G4-2/StyleSheet1/mainDesign.css
+++ b/9346B-G4/9346B-G4-2/StyleSheet1/mainDesign.css
@@ -30,7 +30,6 @@ body {
 }
 
 header {
-
 	position: sticky;
 	top: 10px;
     height: 10px;
@@ -39,13 +38,13 @@ header {
 	color: #555;
 }
 
-
 h1{
 	display: block;
 	font-size: 3em;
 	font-weight: bold;
 	font-family: Book Antiqua;
 }
+
 section {
 	margin-top: 100px;
 }
@@ -53,6 +52,7 @@ section {
 article {
 	margin-top: 100px;
 }
+
 .post-body img {
 	display: block;
 }
@@ -64,8 +64,10 @@ article {
 	height: 400px;
 	transition: transform .3s;
 }
+
 #JCamp:hover{
 	transform: scale(1.2);
+	cursor: pointer;
 }
 
 nav.links{
@@ -89,43 +91,44 @@ nav.links{
 	border-color: none;
 	animation:moveright 3s;
 }
-#zone-guard{
 
+#zone-guard{
 	margin:auto;
 	width: 800px;
 	height: 300px;
 	transition: transform .2s;
 }
+
 #zone-guard:hover{
 	transform: scale(1.1);
+	cursor: pointer;
 }
-
 
 nav.links a{
 	display: inline-block;
 	text-decoration: none;
 	color: #FDFEFE;
-
 }
 
 #cjh-stall{
-
 	margin: auto;
 	width: 800px;
 	height: 400px;
 	padding: auto;
 	transition: transform .5s;
 }
+
 #cjh-stall:hover{
 	transform: scale(1.2);
+	cursor: pointer;
 }
-
 
 nav.links a:hover{
 	display: inline;
 	margin-right: 20px;
 	padding: 1px;
 	color: black;
+	cursor: pointer;
 }
 
 a.nav-link {
@@ -155,17 +158,6 @@ footer.container {
 	text-align: center;
 }
 
-
-iframe{
-	overflow: hidden;
-	width: 800px;
-	height: 500px;
-	border-style: none;
-	margin: 0 auto;
-	display: block;
-	top: 80px;
-}
-
 nav.i-tag ul{
 	text-align: left;
 	margin: 0;
@@ -180,16 +172,15 @@ a.i-nav-link {
     width: 170px;
     border-style: solid;
     text-decoration: none;
-
 }
 
 nav.i-tag a:hover{
 	background-color: #974b2f;
+	cursor: pointer;
 }
 
 img.i-pic { 	
 	margin: 0;
-	
 }
 
 address.i-add {
@@ -207,8 +198,6 @@ h1.i-h1 {
 	width: 20%;
 	border-radius: 40px;
 	padding: 20px;
-
-
 }
 
 h3 {
@@ -227,6 +216,7 @@ p {
     padding-right: 40px;
     position: relative;
 }
+
 h2{
 	font-size: 30px;
 	font-family: Courier new, sans;
