--- a/9346B-G4/9346B-G4-1/PeaceAndOrder/styles/main.css
+++ b/9346B-G4/9346B-G4-1/PeaceAndOrder/styles/main.css
@@ -217,3 +217,8 @@ footer {
     color: black;
     font-weight: bold;
 }
+
+.leftnote_about{opacity: 1;-webkit-transition: opacity 1s linear;}
+.leftnote_about:hover{opacity: 0;}
+
+
